import org.apache.commons.io.FileUtils
import org.apache.tools.ant.filters.ReplaceTokens

import java.time.Instant

plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
    id "org.jetbrains.kotlin.plugin.serialization" version "1.9.22"
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

mainClassName = 'at.xirado.bean.Bean'

group 'at.xirado'
version '5.1.0'

shadowJar {
    archiveFileName = "Bean.jar"
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
    maven { url 'https://m2.dv8tion.net/releases' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://m2.chew.pro/releases' }
    jcenter()
}

dependencies {
    implementation 'net.dv8tion:JDA:5.0.0-beta.21'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    implementation 'org.slf4j:slf4j-api:2.0.12'
    implementation 'ch.qos.logback:logback-classic:1.5.3'

    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
    implementation 'com.zaxxer:HikariCP:5.1.0'

    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'com.github.chew:jda-chewtils:5e1a9f93f9'
    implementation 'org.scilab.forge:jlatexmath:1.0.7'
    implementation "club.minnced:discord-webhooks:0.7.5"
    implementation 'io.github.classgraph:classgraph:4.8.146'
    implementation 'com.github.minndevelopment:jda-ktx:17eb77a'
    implementation 'net.jodah:expiringmap:0.5.10'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'

    // Prometheus
    implementation "io.prometheus:simpleclient:0.14.1"
    implementation "io.prometheus:simpleclient_hotspot:0.14.1"
    implementation "io.prometheus:simpleclient_httpserver:0.14.1"
    implementation 'com.facebook:ktfmt:0.36'

    implementation 'dev.reformator.stacktracedecoroutinator:stacktrace-decoroutinator-jvm:2.3.8'
    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
    implementation 'com.akuleshov7:ktoml-core:0.5.1'

    def ktorVersion = "2.3.9"
    def exposedVersion = "0.48.0"

    implementation "io.ktor:ktor-server-core:${ktorVersion}"
    implementation "io.ktor:ktor-server-netty:${ktorVersion}"
    implementation "io.ktor:ktor-server-content-negotiation:${ktorVersion}"
    implementation "io.ktor:ktor-serialization-kotlinx-json:${ktorVersion}"
    implementation "io.ktor:ktor-server-auth:${ktorVersion}"
    implementation "io.ktor:ktor-server-auth-jwt:${ktorVersion}"
    implementation "io.ktor:ktor-server-cors:${ktorVersion}"
    implementation "io.ktor:ktor-server-status-pages:${ktorVersion}"

    implementation "org.jetbrains.exposed:exposed-core:${exposedVersion}"
    implementation "org.jetbrains.exposed:exposed-crypt:${exposedVersion}"
    implementation "org.jetbrains.exposed:exposed-dao:${exposedVersion}"
    implementation "org.jetbrains.exposed:exposed-jdbc:${exposedVersion}"
    implementation "org.jetbrains.exposed:exposed-json:${exposedVersion}"

    implementation "com.sksamuel.aedile:aedile-core:1.3.1"

    runtimeOnly 'org.jetbrains.kotlin:kotlin-scripting-jsr223:1.9.22'
}

/**
 * Clears resources folder for processResources task
 */
tasks.create("clearResources") {
    FileUtils.deleteDirectory(new File(project.rootDir, 'build/resources/main'))
}

tasks.build {
    dependsOn(tasks.clearResources)
    dependsOn(tasks.shadowJar)
}

processResources {
    filesMatching("**/app.properties") {
        filter ReplaceTokens, tokens: [
                "app-version": version,
                "build-time" : Instant.now().toEpochMilli() + ''
        ]
    }
}

compileKotlin {
    kotlinOptions.jvmTarget = "21"
    kotlinOptions.freeCompilerArgs = List.of("-Xcontext-receivers")
}
